--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.7.9",
     "axios-retry": "^4.5.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
