--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.9",
     "axios-retry": "^4.5.0",
     "dayjs": "^1.11.13",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "swiper": "^11.2.1"
