--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -18,11 +18,8 @@ FROM node:18-alpine AS production
 
 WORKDIR /app
 
-# Copy package files
-COPY package*.json ./
-
-# Install production dependencies only
-RUN npm ci --only=production
+# Install serve package globally
+RUN npm install -g serve@latest
 
 # Copy built files from builder
 COPY --from=builder /app/dist ./dist
@@ -35,8 +32,8 @@ RUN addgroup -g 1001 -S nodejs && \
 # Switch to non-root user
 USER nodejs
 
-# Expose the port the app runs on
+# Expose the port
 EXPOSE 3000
 
-# Start the application using Node.js
-CMD ["node", "dist/server/main.js"]
+# Use npx to ensure serve is found in the path
+CMD ["npx", "serve", "-s", "dist", "-l", "3000"]
