change action build on develop branch

--- a/.github/workflows/dev-pipeline.yml
+++ b/.github/workflows/dev-pipeline.yml
@@ -6,7 +6,7 @@ env:
   OPERATOR_TOKEN: ${{ secrets.OPERATOR_TOKEN }}
 on:
   push:
-    branches: [feature/create-ci]
+    branches: [develop]
 
 jobs:
   dockerize-dev:
